--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ html ::-webkit-scrollbar-thumb{
     display: flex;
     align-items: center;
     justify-content: center;
-    background:rgba(255,255,255,.9);
+    background:rgba(240,243,245,.9);
     position:fixed;
     top:0; right:-105%;
     z-index: 10000;
@@ -180,7 +180,7 @@ html ::-webkit-scrollbar-thumb{
 }
 
 .login-form-container form{
-    background:#fff;
+    background: #F0F3F5;
     border:var(--border);
     width:40rem;
     padding:2rem;
