--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
 
-:root{
+:root {
     --yellow: #FFCD19;
     --dark-color: #FEB30F;
     --black: #444;
     --light-color: #666;
-    --border: .1rem solid rgba(0,0,0,.1);
+    --border: .1rem solid rgba(0, 0, 0, .1);
     --border-hover: 1rem solid var(--black);
-    --box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+    --box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 }
 
-*{
+* {
     font-family: 'Poppins', sans-serif;
-    margin: 0; padding: 0;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    outline: none; border: none;
+    outline: none;
+    border: none;
     text-decoration: none;
     text-transform: capitalize;
     transition: all .2s linear;
     transition: width none;
 }
 
-html{
+html {
     font-size: 62.5%;
     overflow-x: hidden;
     scroll-padding-top: 5rem;
@@ -29,29 +31,29 @@ html{
     background: #F0F3F5;
 }
 
-html ::-webkit-scrollbar{
+html ::-webkit-scrollbar {
     width: 1rem;
 }
 
-html ::-webkit-scrollbar-track{
+html ::-webkit-scrollbar-track {
     background: transparent;
 }
 
-html ::-webkit-scrollbar-thumb{
+html ::-webkit-scrollbar-thumb {
     background: var(--black);
 }
 
-section{
+section {
     padding: 5rem 9%;
 }
 
-.btn{
+.btn {
     margin-top: 1rem;
     display: inline-block;
     padding: .9rem 3rem;
     border: .5rem;
     color: #fff;
-    background:var(--yellow);
+    background: var(--yellow);
     font-size: 1.7rem;
     cursor: pointer;
     font-weight: 500;
@@ -65,20 +67,20 @@ section{
     justify-content: space-between;
 }
 
-.header .header-1 .logo{
+.header .header-1 .logo {
     font-size: 2.5rem;
     font-weight: bolder;
     color: var(--black);
 }
 
-.header .header-1 .logo i{
-    color:var(--yellow);
+.header .header-1 .logo i {
+    color: var(--yellow);
 }
 
-.header .header-1 .search-form{
+.header .header-1 .search-form {
     width: 50rem;
     height: 5rem;
-    border:var(--border);
+    border: var(--border);
     overflow: hidden;
     background: #fff;
     display: flex;
@@ -86,24 +88,24 @@ section{
     border-radius: .5rem;
 }
 
-.header .header-1 .search-form input{
+.header .header-1 .search-form input {
     font-size: 1.6rem;
     padding: 0 1.2rem;
     height: 100%;
     width: 100%;
     text-transform: none;
-    color:var(--black);
+    color: var(--black);
 }
 
-.header .header-1 .search-form label{
+.header .header-1 .search-form label {
     font-size: 2.5rem;
     padding-right: 1.5rem;
-    color:var(--black);
+    color: var(--black);
     cursor: pointer;
 }
 
-.header .header-1 .search-form label:hover{
-    color:var(--yellow);
+.header .header-1 .search-form label:hover {
+    color: var(--yellow);
 }
 
 .header .header-1 .icons div,
@@ -116,256 +118,263 @@ section{
 
 .header .header-1 .icons div:hover,
 .header .header-1 .icons a:hover {
-    color:var(--yellow)
+    color: var(--yellow)
 }
 
-#search-btn{
+#search-btn {
     display: none;
 }
 
-.header .header-2{
-    background:var(--yellow) ;
+.header .header-2 {
+    background: var(--yellow);
 }
 
-.header .header-2 .navbar{
+.header .header-2 .navbar {
     text-align: center;
 }
 
-.header .header-2 .navbar a{
-    color:#fff;
+.header .header-2 .navbar a {
+    color: #fff;
     display: inline-block;
     padding: 1.2rem;
     font-size: 1.7rem;
 }
 
-.header .header-2 .navbar a:hover{
+.header .header-2 .navbar a:hover {
     background: var(--dark-color);
 }
 
-.header .header-2.active{
+.header .header-2.active {
     position: fixed;
-    top: 0; left: 0; right: 0;
+    top: 0;
+    left: 0;
+    right: 0;
     z-index: 1000;
 }
 
-.bottom-navbar{
+.bottom-navbar {
     text-align: center;
     background: var(--yellow);
     position: fixed;
-    bottom: 0; left:0; right: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
     z-index: 1000;
     display: none;
 }
 
-.bottom-navbar a{
+.bottom-navbar a {
     font-size: 2.5rem;
     padding: 2rem;
-    color:#fff
+    color: #fff
 }
 
-.bottom-navbar a:hover{
+.bottom-navbar a:hover {
     background: var(--dark-color);
 }
 
-.login-form-container{
+.login-form-container {
     display: flex;
     align-items: center;
     justify-content: center;
-    background:rgba(240,243,245,.9);
-    position:fixed;
-    top:0; right:-105%;
+    background: rgba(240, 243, 245, .9);
+    position: fixed;
+    top: 0;
+    right: -105%;
     z-index: 10000;
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
 }
 
-.login-form-container.active{
-    right:0;
+.login-form-container.active {
+    right: 0;
 }
 
-.login-form-container form{
+.login-form-container form {
     background: #F0F3F5;
-    border:var(--border);
-    width:40rem;
-    padding:2rem;
+    border: var(--border);
+    width: 40rem;
+    padding: 2rem;
     box-shadow: var(--box-shadow);
     border-radius: .5rem;
-    margin:2rem;
+    margin: 2rem;
 }
 
-.login-form-container form h3{
+.login-form-container form h3 {
     font-size: 2.5rem;
     text-transform: uppercase;
-    color:var(--black);
+    color: var(--black);
     text-align: center;
 }
 
-.login-form-container form span{
+.login-form-container form span {
     display: block;
     font-size: 1.5rem;
     padding-top: 1rem;
 }
 
-.login-form-container form .box{
+.login-form-container form .box {
     width: 100%;
-    margin:.7rem 0;
+    margin: .7rem 0;
     font-size: 1.6rem;
-    border:var(--border);
+    border: var(--border);
     border-radius: .5rem;
-    padding:1rem 1.2rem;
-    color:var(--black);
+    padding: 1rem 1.2rem;
+    color: var(--black);
     text-transform: none;
 }
 
-.login-form-container form .checkbox{
-    display:flex;
+.login-form-container form .checkbox {
+    display: flex;
     align-items: center;
-    gap:.5rem;
-    padding:1rem 0;
+    gap: .5rem;
+    padding: 1rem 0;
 }
 
-.login-form-container form .checkbox label{
+.login-form-container form .checkbox label {
     font-size: 1.5rem;
-    color:var(--light-color);
+    color: var(--light-color);
     cursor: pointer;
     user-select: none;
 }
 
-.login-form-container form .btn{
+.login-form-container form .btn {
     text-align: center;
-    width:100%;
-    margin:1.5rem 0;
+    width: 100%;
+    margin: 1.5rem 0;
 }
 
-.login-form-container form p{
+.login-form-container form p {
     padding-top: .8rem;
-    color:var(--light-color);
+    color: var(--light-color);
     font-size: 1.5rem;
 }
 
-.login-form-container form p a{
-    color:var(--dark-color);
+.login-form-container form p a {
+    color: var(--dark-color);
     text-decoration: underline;
 }
 
-.login-form-container form p a:hover{
+.login-form-container form p a:hover {
     color: var(--black);
     text-decoration: underline;
 }
 
-.login-form-container #close-login-btn{
+.login-form-container #close-login-btn {
     position: absolute;
-    top:1.5rem; right:2.5rem;
+    top: 1.5rem;
+    right: 2.5rem;
     font-size: 5rem;
-    color:var(--black);
+    color: var(--black);
     cursor: pointer;
 }
 
-.home-container{
+.home {
     background: url(../image/banner-bg.jpg) no-repeat;
     background-size: cover;
     background-position: center;
 }
 
-.home .row{
+.home .row {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     gap: 1.5rem;
 }
 
-.home .row .content{
-    flex:1 1 42rem;
+.home .row .content {
+    flex: 1 1 42rem;
 }
 
-.home .row .books-slider{
-    flex:1 1 42rem;
+.home .row .books-slider {
+    flex: 1 1 42rem;
     text-align: center;
-    margin: 2rem;
+    margin-top: 2rem;
 }
 
-.home .row .books-slider a img{
+.home .row .books-slider a img {
     height: 25rem;
 }
 
-.home .row .books-slider a:hover img{
+.home .row .books-slider a:hover img {
     transform: scale(.9);
 }
 
-.home .row .books-slider .stand{
+.home .row .books-slider .stand {
     width: 100%;
     margin-top: -2rem;
 }
 
-.home .row .content h3{
+.home .row .content h3 {
     color: var(--black);
     font-size: 4.5rem;
 }
 
-.home .row .content p{
-    color:var(--light-color);
+.home .row .content p {
+    color: var(--light-color);
     font-size: 1.4rem;
     line-height: 2;
-    padding: 1rem 0; 
+    padding: 1rem 0;
 }
 
 /* media */
 
-@media (max-width:991px){
+@media (max-width:991px) {
 
-    html{
+    html {
         font-size: 55%;
     }
-    
+
     .header .header-1 {
         padding: 2rem;
     }
 
-    section{
+    section {
         padding: 3rem 2rem;
     }
 
 }
 
-@media (max-width:768px){
+@media (max-width:768px) {
 
-    html{
+    html {
         scroll-padding-top: 0;
     }
-    
-    body{
+
+    body {
         padding-bottom: 6rem;
     }
 
-    .header .header-2{
+    .header .header-2 {
         display: none;
     }
 
-    .bottom-navbar{
+    .bottom-navbar {
         display: block;
     }
 
-    #search-btn{
+    #search-btn {
         display: inline-block;
     }
 
-    .header .header-1{
+    .header .header-1 {
         box-shadow: var(--box-shadow);
         position: relative;
     }
 
-    .header .header-1 .search-form{
+    .header .header-1 .search-form {
         position: absolute;
-        top: -115%; right: 2rem;
+        top: -115%;
+        right: 2rem;
         width: 90%;
         box-shadow: var(--box-shadow);
     }
 
-    .header .header-1 .search-form.active{
+    .header .header-1 .search-form.active {
         top: 115%;
     }
 
-    .home .row .content{
+    .home .row .content {
         text-align: center;
     }
 
@@ -375,11 +384,8 @@ section{
 
 }
 
-@media (max-width:450px){
-    html{
+@media (max-width:450px) {
+    html {
         font-size: 50%
     }
 }
-
-
-
